--- a/beercoin-webapp/index.html
+++ b/beercoin-webapp/index.html
@@ -12,6 +12,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <script src="/liquidfun_v1.1.0.min.js"></script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
