--- a/beercoin-webapp/public/beer-mini.html
+++ b/beercoin-webapp/public/beer-mini.html
@@ -19,17 +19,14 @@
         }
 
         #canvas {
-            border: 1px solid #8b4513;
-            border-radius: 5px;
-            background: linear-gradient(135deg, #1a1a1a, #2a2a2a);
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+            background: transparent;
             transform: scale(3);
             transform-origin: center;
         }
     </style>
 </head>
 <body>
-    <canvas id="canvas" width="110" height="150"></canvas>
+    <canvas id="canvas" width="37" height="50"></canvas>
 
     <script>
         // Load LiquidFun dynamically with better error handling
